--- a/.github/workflows/update-targets.yml
+++ b/.github/workflows/update-targets.yml
@@ -1,5 +1,7 @@
 name: Update Targets
 run-name: ${{ github.workflow }} run by ${{ github.actor }}
+permissions:
+  actions: write
 on:
   push:
     branches:
